# eneo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CRAWLER_DEBUGGING_GUIDE.md  README.md  Taskfile.yml  vllm.md
backend/: .env.template  .pyright-baseline.json  .type-check-baseline  .type-check-future-baseline  Dockerfile  README.md  check_icon_columns.py  infocaption_schema.json  init_db.py  pyproject.toml  pyrightconfig.json  pyrightconfig.strict.json  pytest.ini  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 0921e493e3ca_merge_icons_migration.py  0f433b5c24c3_merge_migration_heads.py  15e39b6c6245_simplify_mcp_schema_tenant_only.py  185db1e1b5b4_merge_dev_feature_heads.py  1ca224418b7b_add_user_pagination_indexes.py  1d7f1a43c0c2_add_flow_managed_assistant_ownership.py  202411041400_add_folder_fields_to_integration_knowledge.py  202411041401_add_sharepoint_item_id_to_info_blobs.py  202502201200_5b8d3d2c51ae_add_sync_metadata_to_integration_knowledge.py  202502201330_add_sharepoint_subscription_columns.py  202508141500_add_basic_auth_to_websites.py  202508281300_970ed4255047_add_litellm_model_name_to_completion_.py  202509011134_88aa5736d5e6_migrate_model_defaults_to_jsonb.py  202509011400_14df4152f4b8_add_normalized_parameter_fields_to_completion_models.py  202509021400_add_litellm_model_name_to_completion_models.py  202509031001_f6ae7dc6c04f_add_litellm_model_name_to_embedding_.py  202509151200_update_kb_whisper_to_berget.py  202509231400_1a2b3c4d5e6f_add_completion_model_usage_stats_table.py  202509231401_2b3c4d5e6f7a_add_completion_model_migration_history_table.py  202509270001_add_basic_auth_and_migrate_crawl_intervals.py  202509281800_add_crawler_engine_001_add_crawler_engine_to_websites.py  202509281900_add_crawl_intervals_enhance_update_intervals.py  202509281901_add_update_interval_index_performance.py  202509301200_add_last_crawled_at_tracking.py  202509301201_add_crawl_scheduling_enhancements.py  20251007_1604e9b11e38_add_tenant_api_credentials.py  20251010_add_tenant_slug_and_federation_config.py  202510130900_add_website_crawl_scheduling.py  202510140000_add_http_auth_scheduling_and_improvements.py  202510140900_add_http_auth_to_websites.py  202510140915_fix_crawl_scheduling_index.py  202510201730_auto_seed_allowed_origins.py  202510231400_add_delta_token_to_integration_knowledge.py  20251027_add_mcp_servers.py  20251027_add_tenant_templates_and_settings.py  20251027_tenant_scoped_templates.py  202510281430_add_sync_logs_table.py  20251028_add_template_audit_fields.py  20251028_add_template_default_configuration.py  20251029_add_template_icon_support.py  (+95 more)
backend/docs/: AI_MODELS_MANAGEMENT.md  MULTI_TENANT_CREDENTIALS.md  TYPE_CHECKING.md
backend/docs/api/: error-handling.md
backend/scripts/: audit_flow_output_contracts.py  generate_api_key_endpoint_matrix.py  pyright_ratcheting.py  seed_global_models_for_migration_test.py  test_api_key_regression.py  typecheck_changed.sh
backend/tests/: conftest.py  fixtures.py  test_settings_override.py
backend/tests/contract/: test_tenant_credentials_api.py
backend/tests/integration/: conftest.py  fixtures_completion_models.py  test_health.py  (+46 more)
(+1411 files in other folders)
